--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #646767;
+    background-color: #6c757d;
     color: #fff;
     text-align: center;
     padding: 10px;
