--- a/css/pagelayout.css
+++ b/css/pagelayout.css
@@ -1,24 +1,14 @@
 
-body {
+.body {
     font-family: Arial, sans-serif;
     background-color: #454444;
   }
   
-  .container {
+  /* .container {
     max-width: 960px;
     margin: 0 auto;
     padding: 20px;
-  }
+  } */
 
-  .content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #454444; 
-    padding: 20px;
-  }
-  table {
-    margin-top: 70px;
-  }
 
   
