--- a/css/artist.css
+++ b/css/artist.css
@@ -1,6 +1,9 @@
 /* CSS styles for the module table */
 .artist-table {
     border-collapse: collapse;
+    /* margin-top: 70px;
+    padding-top:  */
+    top: 50%;
     margin: 20px auto;
     font-size: 16px;
     text-align: center;
