--- a/css/ourapi.css
+++ b/css/ourapi.css
@@ -23,7 +23,7 @@
 }
 #resultsAPI {
     position: absolute;
-     left: 50%;
+    left: 50%;
     transform: translateX(-50%);
     margin-top: 100px;
     max-width: 600px;
@@ -32,8 +32,22 @@
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+
+  .artist-resultAlbum {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
   
-  #resultsAPI h2 {
+  .artist-resultReleased {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+  .artist-resultSales {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+
+  /* #resultsAPI h2 {
     font-size: 24px;
     margin-bottom: 10px;
   }
@@ -41,4 +55,4 @@
   #resultsAPI p {
     font-size: 16px;
     margin-bottom: 5px;
-  }
+  } */
